style.css
body {
  background-color: #fff;
  font-family: Arial, Helvetica, sans-serif;
}

header{
  background-color: #333;
  width:100%;
  color: #888;
}

 header img{
  float:left;
  margin-left: 10%;
  margin-top: 21px;
}

a {
  color:#888;
  text-decoration: none;
}

a:hover{
  color: #888;
  background-color: #000;
  padding-top: 27px;
  padding-bottom:27px;
  padding-left: 10px;
  padding-right: 10px;
}

a:visited{
  color: #888;
}

header ul{
  padding-top: 50px;
  padding-bottom: 50px;
}

header li{
  display: inline;
  padding-left: 7%;
}

/* Main Focus Area */

main{
  background-color: #fff;
  padding-left: 10%;
  color: #555;
}

main img{
  margin-top: 30px;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-right: 0px;
}

main ul{
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left:0px;
  padding-right:0px;
}
main li{
  display: inline;
}

#banner2{
  margin-left: 30px;
  margin-right: 30px;
}

/* section{
  margin: 10px;
} */

section img{
  float: left;
}

h2{
  padding-top: 30px;
  padding-bottom: 15px;
  margin-left: 515px;
  font-size: larger;
}

p{
  height: 310px;
  width: 450px;
  overflow: scroll;
  font-size: medium;
  margin-left: 515px;
}

button{
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
  margin-left: 3%;
  margin-top: 15px;
  margin-bottom: 2%;
  background: #000;
  color: #fff;
  font-size: medium;
  transition: background-color 350ms ease;
}

button:hover {
  background-color: red;
}

/* Footer */
footer{
  background-color: #333;
  padding-top: 100px;
}

